--- a/random.html
+++ b/random.html
@@ -20,7 +20,10 @@
   </div>
     </nav>
 
-    <div id="cityName"></div>
+    <div id="cityName">
+      <h1 id="city-name">City Name</h1>
+      <img id="city-image"  width=""/>
+    </div>
 
     <div class="row">
       <div class="col-sm-12 col-md-6">
@@ -36,6 +39,6 @@
 <footer class="container-fluid text-center">
   <p>Footer Text</p>
 </footer>
-
+<script src="/assets/script/script.js"></script>
 </body>
 </html>
