--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <link rel="stylesheet" href="./assets/style/style.css">
-
 </head>
 <body>
 
@@ -32,7 +31,8 @@
 </div>
 </section>
 
-<section id="randomize"><a class="btn btn-primary" href="/random.html" role="button">Random</a>
+<section id="randomize">
+  <a class="btn btn-primary" href="/random.html" role="button">Random</a>
 </section>
   
 <div id="randomCity"></div>
@@ -51,7 +51,7 @@
       <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
       <p>info 2</p>    
     </div>
-   
+  
 
   </div>
 </div><br>
@@ -59,6 +59,6 @@
 <footer class="container-fluid text-center">
   <p>Footer Text</p>
 </footer>
-
+<!-- <script src="/assets/script/script.js"></script> -->
 </body>
 </html>
