--- a/random.html
+++ b/random.html
@@ -15,14 +15,14 @@
 <nav class="navbar navbar-inverse">
   <div class="container-fluid">
     <div class="navbar-header"> 
-      <a class="navbar-brand" href="#">Logo</a>
+      <a class="navbar-brand" href="./index.html">Logo</a>
     </div>
   </div>
     </nav>
 
     <div id="cityName">
       <h1 id="city-name">City Name</h1>
-      <img id="city-image"  width=""/>
+      <img id="city-image"  width="" height="300px"/>
     </div>
 
     <div class="row">
@@ -30,7 +30,7 @@
         <a class="btn btn-primary" href="/city.html" role="button">Explore your city</a>
       </div>
       <div class="col-sm-12 col-md-6"> 
-        <a class="btn btn-primary" href="/index.html" role="button">Spin again</a>
+        <a class="btn btn-primary" href="#" id="spin-btn" role="button">Spin again</a>
       </div>
 </div>
 
