--- a/random.html
+++ b/random.html
@@ -12,33 +12,42 @@
 </head>
 <body>
 
-<nav class="navbar navbar-inverse">
-  <div class="container-fluid">
-    <div class="navbar-header"> 
-      <a class="navbar-brand" href="./index.html">Logo</a>
-    </div>
-  </div>
+  <header>
+    <nav class="navbar navbar-inverse">
+      <div class="container-fluid">
+        <div class="navbar-header"> 
+          <a class="navbar-brand" href="./index.html">Logo</a>
+        </div>
+      </div>
     </nav>
+  </header>
 
-    <div id="cityName">
+  <main>
+    
+    <section id="cityName">
       <h1 id="city-name">City Name</h1>
       <img id="city-image"  width="" height="300px"/>
-    </div>
+    </section>
 
-    <div class="row">
+    <section class="row">
       <div class="col-sm-12 col-md-6">
         <a class="btn btn-primary" href="/city.html" role="button">Explore your city</a>
       </div>
       <div class="col-sm-12 col-md-6"> 
         <a class="btn btn-primary" href="#" id="spin-btn" role="button">Spin again</a>
       </div>
-</div>
+    </section>
 
+    <section class="recent-storage">
+      <ul class="storage-container">
+      </ul>
+    </section>
 
+  </main>
 
-<footer class="container-fluid text-center">
+<!-- <footer class="container-fluid text-center">
   <p>Footer Text</p>
-</footer>
+</footer> -->
 <script src="/assets/script/script.js"></script>
 </body>
 </html>
