--- a/spinanimation.html
+++ b/spinanimation.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./assets/style/style.css">
+    <link rel="stylesheet" href="./assets/style/spinanimation.css">
 </head>
 <body>
     <div class="title"><h1 id="title">Random Travel Planner</h1></div>
@@ -23,6 +23,6 @@
     <div id="result"></div>
     <div id="cityName"></div>
     
-    <script src="./assets/script/script.js"></script>
+    <script src="./assets/script/spinanimation.js"></script>
 </body>
 </html>
