added additional pages for API display

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
 
     <nav class="navbar">
-        <div class="container-fluid">
+        <div class="container-fluid">g
           <div class="navbar-header">
             <div class="text-center">
             <h1>randomCity</h1>
@@ -60,7 +60,7 @@
                 <div class="col-6">
 
                     <div class="info-section">
-                        <img src="/assets/img/pexels-anastasiya-vragova-6791741.jpg" class="rounded-circle" style="max-width: 200px; max-height: 200px; height: 100%; width: 100%;">
+                        <img src="/assets/img/pexels-leah-kelley-3935702 (1).jpg" class="rounded-circle" style="max-width: 200px; max-height: 200px; height: 100%; width: 100%;">
                         <h2>info</h2>
                         <p> We love to travel and we want to bring the spirit of adventure to you. What could be more adventurous than a completely random trip, planned with the click of a button? Use our unique site to generate a completely random travel plan and see where the world takes you.</p>
                     </div>
@@ -74,7 +74,10 @@
   
                       <div class="info-section">
                           <h2>past searches</h2>
-                          <p></p>
+                          <p>    <section class="recent-storage">
+                            <ul class="storage-container">
+                            </ul>
+                          </section></p>
                       </div>
   
                   </div>
