--- a/random.html
+++ b/random.html
@@ -1,26 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Random City Generator</title>
+  <title>randCity Generator | random</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-  <link rel="stylesheet" href="./assets/style/style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Neucha&display=swap" rel="stylesheet">
+  
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+  
+  <link rel="stylesheet" href="./assets/style/style.css">
+     
 </head>
 <body>
 
-  <header>
-    <nav class="navbar navbar-inverse">
-      <div class="container-fluid">
-        <div class="navbar-header"> 
-          <a class="navbar-brand" href="./index.html">Logo</a>
+    <nav class="navbar">
+        <div class="container-fluid">g
+          <div class="navbar-header">
+            <div class="text-center">
+            <h1>randomCity</h1>
+            </div></div>
         </div>
-      </div>
     </nav>
-  </header>
 
   <main>
     
@@ -31,17 +35,14 @@
 
     <section class="row">
       <div class="col-sm-12 col-md-6">
-        <a class="btn btn-primary" href="/city.html" role="button">Explore your city</a>
+        <a class="btn btn-primary explore" href="/city.html" role="button">Explore your city</a>
       </div>
       <div class="col-sm-12 col-md-6"> 
-        <a class="btn btn-primary" href="#" id="spin-btn" role="button">Spin again</a>
+        <a class="btn btn-primary explore" href="/index.html" id="spin-btn" role="button">Spin again</a>
       </div>
     </section>
 
-    <section class="recent-storage">
-      <ul class="storage-container">
-      </ul>
-    </section>
+
 
   </main>
 
