--- a/random.html
+++ b/random.html
@@ -38,7 +38,7 @@
         <a class="btn btn-primary explore" href="/city.html" role="button">Explore your city</a>
       </div>
       <div class="col-sm-12 col-md-6"> 
-        <a class="btn btn-primary explore" href="/index.html" id="spin-btn" role="button">Spin again</a>
+        <a class="btn btn-primary explore" href="#" id="spin-btn" role="button">Spin again</a>
       </div>
     </section>   
 
