--- a/random.html
+++ b/random.html
@@ -35,13 +35,17 @@
 
     <section class="row">
       <div class="col-sm-12 col-md-6">
-        <a class="btn btn-primary explore" href="/city.html" role="button">Explore your city</a>
+        <a class="btn btn-primary explore" href="/explore.html" id="explorebtn" role="button">Explore your city</a>
       </div>
       <div class="col-sm-12 col-md-6"> 
         <a class="btn btn-primary explore" href="#" id="spin-btn" role="button">Spin again</a>
       </div>
     </section>   
 
+    <section class="recent-storage">
+      <ul class="storage-container">
+      </ul>
+    </section>
 
 
   </main>
