Added functionality between webpages
- redirects user to correct webpage when buttons are clicked
- displays the weather for chosen city

--- a/explore.html
+++ b/explore.html
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="./assets/style/style.css">
      
 </head>
-<body>
+<body id="exploreHTML">
 
     <nav class="navbar">
         <div class="container-fluid">g
@@ -41,12 +41,6 @@
             <h3>Weather in your random city</h3>
 
             <div class="leftside d-flex">
-                <!-- Search bar -->
-                <!--<div class="form">
-                    <label for="city-input"><b>Search for a City:</b></label>
-                    <input type="text" class="form-control" id="city-input" placeholder="San Diego">
-                    <button class="btn btn-primary btn-lg btn-block" id="search-btn">Search<i
-                            class="fas fa-search"></i></button>-->
                     <!-- Current Weather Information -->
                     <div class="city">
                         <div class="currentWeather p-0">
