--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="banner-container">
         <div class="banner">
 
-            <button type="button" class="btn btn-primary btn-lg randomButton">randomize</button>
+            <a class="btn btn-primary btn-lg randomButton" href="./random.html">randomize</a>
 
         </div>
         </div>
