--- a/random.html
+++ b/random.html
@@ -35,7 +35,7 @@
 
     <section class="row">
       <div class="col-sm-12 col-md-6">
-        <a class="btn btn-primary explore" href="/explore.html" id="explorebtn" role="button">Explore your city</a>
+        <a class="btn btn-primary explore" href="./explore.html" id="explorebtn" role="button">Explore your city</a>
       </div>
       <div class="col-sm-12 col-md-6"> 
         <a class="btn btn-primary explore" href="#" id="spin-btn" role="button">Spin again</a>
@@ -43,6 +43,8 @@
     </section>   
 
     <section class="recent-storage">
+      <h2>past searches</h2>
+
       <ul class="storage-container">
       </ul>
     </section>
