Hotel Booking API added
Added functinality to webpage by adding hotel booking api

--- a/explore.html
+++ b/explore.html
@@ -154,12 +154,9 @@
 
         </div>
     </div>
-      <div class="col-sm-12 col-md-6"> 
-        <div class="hotels">
-            <h3>Accomodations in your random city</h3>
-
-        </div>
-    </div>
+    <section>
+        <div id="infoList"></div>
+    </section>
     </div>
     </section>
 
