--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 </head>
 <body>
 
-    <nav class="navbar">
-        <div class="container-fluid">g
+    <nav class="fixed-header">
+        <div class="container-fluid">
           <div class="navbar-header">
             <div class="text-center">
             <h1>randomCity</h1>
@@ -32,10 +32,10 @@
 
     <div class="col-12"> 
 
-        <div class="banner-container">
+        <div class="outer-container">
         <div class="banner">
+            <a class="btn btn-primary randomButton" href="random.html" role="button">randomize</a>
 
-            <button type="button" class="btn btn-primary btn-lg randomButton">randomize</button>
 
         </div>
         </div>
@@ -45,44 +45,36 @@
     </div>
 </div>
 
-    <div class="container-fluid">
-            <div class="row">
-                <div class="col-6">
 
-                    <div class="info-section">
-                        <img src="/assets/img/pexels-anastasiya-vragova-6791741.jpg" class="rounded-circle" style="max-width: 200px; max-height: 200px; height: 100%; width: 100%;">
-                        <h2>about</h2>
-                        <p>We're travellers just like you. We've been there, and back again.</p>
-                        <p>We hope to inspire fellow travellers to get off the beaton path and discover the truely unique places the world has to offer.</p>
-                    </div>
-
-                </div>
-                <div class="col-6">
-
-                    <div class="info-section">
-                        <img src="/assets/img/pexels-leah-kelley-3935702 (1).jpg" class="rounded-circle" style="max-width: 200px; max-height: 200px; height: 100%; width: 100%;">
-                        <h2>info</h2>
+<div class="outer-container">
+<div class="container-fluid info-section">
+    
+    <div class="row">
+        <div class="col-md-6"><img src="/assets/img/pexels-leah-kelley-3935702 (1).jpg" class="rounded-circle" style="max-width: 200px; max-height: 200px; height: 100%; width: 100%;">
+            <h2>about</h2>
+            <p>We're travellers just like you. We've been there, and back again.</p>
+            <p>We hope to inspire fellow travellers to get off the beaton path and discover the truely unique places the world has to offer.</p>
+        </div>
+        <div class="col-md-6"><img src="/assets/img/pexels-anastasiya-vragova-6791741.jpg" class="rounded-circle" style="max-width: 200px; max-height: 200px; height: 100%; width: 100%;">
+            <h2>info</h2>
                         <p> We love to travel and we want to bring the spirit of adventure to you. What could be more adventurous than a completely random trip, planned with the click of a button? Use our unique site to generate a completely random travel plan and see where the world takes you.</p>
-                    </div>
+        </div></div>
+    </div>
+</div>
 
-                </div>
-            </div>
+<div class="outer-container hide">
+<div class="container-fluid info-section">
+    <div class="row">
+        <div class="col-12">
+                <h2>past searches</h2>
+                <p><section class="recent-storage">
+                <ul class="storage-container">
+                </ul>
+        </div>   
+    </div>
+</div>
+</div>
 
-            <div class="container-fluid">
-              <div class="row">
-                  <div class="col-12">
-  
-                      <div class="info-section">
-                          <h2>past searches</h2>
-                          <p>    <section class="recent-storage">
-                            <ul class="storage-container">
-                            </ul>
-                          </section></p>
-                      </div>
-  
-                  </div>
-                </div>
-  
-              </div>   
+<footer></footer>
 </body>
 </html>
