--- a/random.html
+++ b/random.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>randCity Generator | random</title>
+  <title>randCity | results</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/css2?family=Neucha&display=swap" rel="stylesheet">
@@ -17,8 +17,8 @@
 </head>
 <body>
 
-    <nav class="navbar">
-        <div class="container-fluid">g
+    <nav class="fixed-header">
+        <div class="container-fluid">
           <div class="navbar-header">
             <div class="text-center">
             <h1>randomCity</h1>
@@ -29,16 +29,16 @@
   <main>
     
     <section id="cityName">
-      <h1 id="city-name">City Name</h1>
-      <img id="city-image"  width="" height="300px"/>
+      <h3 id="city-name">City Name</h3>
+      <img id="city-image"  width="" height="300px" class="city-image" />
     </section>
 
     <section class="row">
       <div class="col-sm-12 col-md-6">
-        <a class="btn btn-primary explore" href="/city.html" role="button">Explore your city</a>
+        <a class="btn btn-primary explore" href="/explore.html" role="button">Explore your city</a>
       </div>
       <div class="col-sm-12 col-md-6"> 
-        <a class="btn btn-primary explore" href="/index.html" id="spin-btn" role="button">Spin again</a>
+        <a class="btn btn-primary explore" href="/index.html" id="spin-btn" role="button">Prior Searches & Spin again</a>
       </div>
     </section>   
 
@@ -46,9 +46,7 @@
 
   </main>
 
-<!-- <footer class="container-fluid text-center">
-  <p>Footer Text</p>
-</footer> -->
-<script src="/assets/script/script.js"></script>
+
+<script src="./assets/script/script.js"></script>
 </body>
 </html>
