updated HTML to connect to script
Added neccessary classes and ids to connect script

--- a/random.html
+++ b/random.html
@@ -38,9 +38,14 @@
         <a class="btn btn-primary explore" href="/explore.html" role="button">Explore your city</a>
       </div>
       <div class="col-sm-12 col-md-6"> 
-        <a class="btn btn-primary explore" href="/index.html" id="spin-btn" role="button">Prior Searches & Spin again</a>
+        <a class="btn btn-primary explore" href="#" id="spin-btn" role="button">Prior Searches & Spin again</a>
       </div>
     </section>   
+
+    <section>
+      <ul class="storage-container">
+      </ul>
+    </section>
 
 
 
