--- a/index.html
+++ b/index.html
@@ -34,8 +34,10 @@
 
         <div class="outer-container">
         <div class="banner">
-            <a class="btn btn-primary randomButton" href="random.html" role="button">randomize</a>
-
+            <a id="spinMe" class="btn btn-primary randomButton" href="random.html" role="button">randomize</a>
+          <div id="animation"></div>
+          <div id="result"></div>
+          <div id="cityName"></div>
 
         </div>
         </div>
