--- a/explore.html
+++ b/explore.html
@@ -158,24 +158,23 @@
                          <!--END-->
           
 </div></div></div>
-
-
-          <div class="col-sm-12 col-md-6 ">
-            <div class="g-2 m-2 hotels">
-
-
-              <h3>Accomodations in your random city</h3>
-              <div id="infoList"></div>
-
-            </div>
-          </div>
-
-
         </div>
       </div>
 
-</div></div></div>
-                     
+</div></div>
+<div class="row">
+  <div class="col-sm-12 col-md-6 ">
+    <div class="g-2 m-2 hotels">
+
+
+      <h3>Accomodations in your random city</h3>
+      <div id="infoList"></div>
+
+    </div>
+  </div>
+</div>
+
+</div>
 
 
     <section id="spinagain">
