adjusted layout on random page

--- a/random.html
+++ b/random.html
@@ -38,19 +38,28 @@
         <a class="btn btn-primary explore" href="/explore.html" role="button">Explore your city</a>
       </div>
       <div class="col-sm-12 col-md-6"> 
-        <a class="btn btn-primary explore" href="#" id="spin-btn" role="button">Prior Searches & Spin again</a>
+        <a class="btn btn-primary explore" href="/index.html" id="spin-btn" role="button">Spin again</a>
       </div>
     </section>   
 
-    <section>
-      <ul class="storage-container">
-      </ul>
-    </section>
 
+
+    <div class="outer-container">
+      <div class="container-fluid info-section">  
+          <div class="row">
+              <div class="col-12">
+                      <h2>past searches</h2>
+                      <ul class="storage-container">
+                      </ul>
+              </div>   
+          </div>
+      </div>
+      </div>
 
 
   </main>
 
+  <footer></footer>
 
 <script src="./assets/script/script.js"></script>
 </body>
