final adjustments to style and html

--- a/explore.html
+++ b/explore.html
@@ -16,6 +16,9 @@
 </head>
 <body id="exploreHTML">
 
+  
+  <!--Top Section-->
+
     <nav class="fixed-header">
         <div class="container-fluid">
           <div class="navbar-header">
@@ -27,18 +30,22 @@
 
   <main>
     
+     <!--City Name Populated-->   
+
     <section id="cityName">
       <h3 id="city-name">City Name</h3>
     </section>
 
 
+  <!--Destination Info-->
+
     <section id="cityinfo"></section>
 
 
-
+<!--weather-->
       <div class="container-fluid overflow-hidden">
         <div class="row">
-          <div class="col-sm-12 col-md-6 ">
+          <div class="col-12">
             <div class="g-2 m-2 weather">
 
               <h3>Weather in your random city</h3>
@@ -162,8 +169,12 @@
       </div>
 
 </div></div>
+
+<!--Accomodations-->
+
 <div class="row">
-  <div class="col-sm-12 col-md-6 ">
+
+  <div class="col-12 ">
     <div class="g-2 m-2 hotels">
 
 
