--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 </head>
 <body>
 
+    <!--Top Section-->
+
     <nav class="fixed-header">
         <div class="container-fluid">
           <div class="navbar-header">
