--- a/random.html
+++ b/random.html
@@ -17,6 +17,7 @@
 </head>
 <body>
 
+<!--Top Section-->
     <nav class="fixed-header">
         <div class="container-fluid">
           <div class="navbar-header">
@@ -27,7 +28,8 @@
     </nav>
 
   <main>
-    
+ 
+ <!--City Name Populated-->   
     <section id="cityName">
       <h3 id="city-name">City Name</h3>
       <img id="city-image"  width="" height="300px" class="city-image" />
@@ -43,7 +45,7 @@
     </section>   
 
 
-
+<!--Past Searches-->
     <div class="outer-container">
       <div class="container-fluid info-section">  
           <div class="row">
@@ -59,6 +61,7 @@
 
   </main>
 
+  <!--footer-->
   <footer></footer>
 
 <script src="./assets/script/script.js"></script>
