--- a/explore.html
+++ b/explore.html
@@ -23,7 +23,7 @@
         <div class="container-fluid">
           <div class="navbar-header">
             <div class="text-center">
-            <h1>randomCity</h1>
+            <h1>Next City</h1>
             </div></div>
         </div>
     </nav>
