--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@
 <div class="container-fluid info-section">
     
     <div class="row">
-        <div class="col-md-6"><img src="/assets/img/pexels-leah-kelley-3935702 (1).jpg" class="rounded-circle" style="max-width: 200px; max-height: 200px; height: 100%; width: 100%;">
+        <div class="col-md-6"><img src="./assets/img/pexels-leah-kelley-3935702 (1).jpg" class="rounded-circle" style="max-width: 200px; max-height: 200px; height: 100%; width: 100%;">
             <h2>about</h2>
             <p>We're travellers just like you. We've been there, and back again.</p>
             <p>We hope to inspire fellow travellers to get off the beaton path and discover the truely unique places the world has to offer.</p>
         </div>
-        <div class="col-md-6"><img src="/assets/img/pexels-anastasiya-vragova-6791741.jpg" class="rounded-circle" style="max-width: 200px; max-height: 200px; height: 100%; width: 100%;">
+        <div class="col-md-6"><img src="./assets/img/pexels-anastasiya-vragova-6791741.jpg" class="rounded-circle" style="max-width: 200px; max-height: 200px; height: 100%; width: 100%;">
             <h2>info</h2>
                         <p> We love to travel and we want to bring the spirit of adventure to you. What could be more adventurous than a completely random trip, planned with the click of a button? Use our unique site to generate a completely random travel plan and see where the world takes you.</p>
         </div></div>
