fixed some bugs

--- a/explore.html
+++ b/explore.html
@@ -189,7 +189,7 @@
 
 
     <section id="spinagain">
-        <a class="btn btn-primary explore" href="/index.html" id="spin-btn" role="button">Spin again</a>
+        <a class="btn btn-primary explore" href="./index.html" id="spin-btn" role="button">Spin again</a>
 </section>
 
   </main>
