--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   
-  <link rel="stylesheet" href="./assets/style/style.css">
+  <link rel="stylesheet" href="./assets/style/style.css">   
      
 </head>
 <body>
 
-    <!--Top Section-->
+    <!--Top Section-->   
 
     <nav class="fixed-header">
         <div class="container-fluid">
@@ -36,7 +36,7 @@
 
         <div class="outer-container">
         <div class="banner">
-            <a id="spinMe" class="btn btn-primary randomButton" href="random.html" role="button">randomize</a>
+            <a id="spinMe" class="btn btn-primary randomButton" href="./random.html" role="button">randomize</a>
           <div id="animation"></div>
           <div id="result"></div>
           <div id="cityName"></div>
