--- a/random.html
+++ b/random.html
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="./assets/style/style.css">
      
 </head>
-<body>
+<body>      
 
 <!--Top Section-->
     <nav class="fixed-header">
@@ -37,11 +37,11 @@
 
     <section class="row">
       <div class="col-sm-12 col-md-6">
-        <a class="btn btn-primary explore" href="/explore.html" role="button">Explore your city</a>
+        <a class="btn btn-primary explore" href="./explore.html" role="button">Explore your city</a>
       </div>
       <div class="col-sm-12 col-md-6"> 
-        <a class="btn btn-primary explore" href="/index.html" id="spin-btn" role="button">Spin again</a>
-      </div>
+        <a class="btn btn-primary explore" href="./index.html" id="spin-btn" role="button">Spin again</a>
+      </div>   
     </section>   
 
 
