--- a/random.html
+++ b/random.html
@@ -40,7 +40,7 @@
         <a class="btn btn-primary explore" href="./explore.html" role="button">Explore your city</a>
       </div>
       <div class="col-sm-12 col-md-6"> 
-        <a class="btn btn-primary explore" href="" id="spin-btn" role="button">Spin again</a>
+        <a class="btn btn-primary explore" href="#" id="spin-btn" role="button">Spin again</a>
       </div>
     </section>   
 
